--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,3 +1,15 @@
+06.10.2024: Release 0.2
+-----------------------
+
+Added functions:
+
+- mdz_ansi_alg_replace
+
+Modified functions:
+
+- mdz_ansi_alg_count  - added counting from right side
+- mdz_ansi_alg_remove - added removing from right side
+
 09.09.2024: Release 0.1
 -----------------------
 
