--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,3 +1,12 @@
+08.10.2024: Release 0.3
+-----------------------
+
+Added functions:
+- mdz_ansi_16_reverse
+
+Modified functions:
+- mdz_ansi_16_replace - added implementation of MDZ_ANSI_REPLACE_STRAIGHT
+
 06.10.2024: Release 0.2
 -----------------------
 
